add_subdirectory (managed)
add_subdirectory (pal)
add_subdirectory (Common)
add_subdirectory (Federation)
add_subdirectory (Hosting2)
add_subdirectory (Lease)
add_subdirectory (LeaseAgent)
add_subdirectory (ServiceModel) 
add_subdirectory (Reliability)
add_subdirectory (Transport) 
add_subdirectory (Naming) 
add_subdirectory (retail) 
add_subdirectory (resources) 
add_subdirectory (Store)
add_subdirectory (client)
add_subdirectory (api)
add_subdirectory (query)
add_subdirectory (Management)
add_subdirectory (systemservices)
add_subdirectory (ServiceGroup)
add_subdirectory (Communication)
add_subdirectory (FabricNode)
add_subdirectory (httpgateway)
add_subdirectory (FabricGateway)
add_subdirectory (Testability)
add_subdirectory (AzureActiveDirectory)
add_subdirectory (ktllogger)

if (CLANG_VERSION_STRING VERSION_GREATER 3.9)
add_subdirectory(data)
endif()

#add_subdirectory(BlockStore)
