set (lib_TestCommon "test_common" CACHE STRING "Test Common library")

add_subdirectory (TestCommon)
add_subdirectory (TestHooks)
add_subdirectory (FederationTestCommon)
add_subdirectory (FederationTest)
add_subdirectory (FabricTest)
add_subdirectory (LinuxRetailTests)
add_subdirectory (LinuxRunAsTest)
add_subdirectory (scripts)

