add_subdirectory (ClusterManager) 
add_subdirectory (healthmanager) 
add_subdirectory (FileStoreService) 
add_subdirectory (ImageModel) 
add_subdirectory (ImageStore)
add_subdirectory (Common)
add_subdirectory (ManagementSubsystem)
add_subdirectory (RepairManager)
add_subdirectory (FaultAnalysisService)
add_subdirectory (UpgradeService)
add_subdirectory (BackupRestoreService)
add_subdirectory (UpgradeOrchestrationService)
add_subdirectory (fabricsystemapppackage)
add_subdirectory (TokenValidationService)
add_subdirectory (infrastructureservice)
add_subdirectory (DnsService)
add_subdirectory (HttpTransport)
add_subdirectory (ResourceMonitor)
