install(
    DIRECTORY ${PROJECT_SOURCE_DIR}/${KTL_LIB_DIR}/kxm 
    DESTINATION ${TEST_OUTPUT_DIR}/..
)

install(
    FILES ${PROJECT_SOURCE_DIR}/${KTL_LIB_DIR}/kxm/InstallKxm.sh 
    DESTINATION ${TEST_OUTPUT_DIR}/../kxm/
    PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
)
